--- a/client/public/view/communityInfo.hbs
+++ b/client/public/view/communityInfo.hbs
@@ -5,7 +5,7 @@
     <title>myCommunity</title>
 </head>
 <body>
-    <div id="main" communityID="{{communityID}}" userCommunityID="{{userCommunityID}}"></div>
+    <div id="main" communityID="{{communityID}}"></div>
     <script src="/js/communityInfo.js"></script>
 </body>
 </html>
