--- a/client/public/view/userEdit.hbs
+++ b/client/public/view/userEdit.hbs
@@ -7,7 +7,7 @@
     <title>개인정보 수정</title>
 </head>
 <body>
-    <div id="main"></div>
+    <div id="main" userID={{userID}}></div>
     <script src="/js/userEdit.js">
 
     </script>
