--- a/client/public/view/communityEdit.hbs
+++ b/client/public/view/communityEdit.hbs
@@ -5,7 +5,7 @@
     <title>커뮤니티 정보 변경</title>
 </head>
 <body>
-    <div id="main" communityID="{{communityID}}"></div>
+    <div id="main"></div>
     <script src="/js/communityEdit.js"></script>
 </body>
 </html>
