--- a/client/public/view/passwordHelp.hbs
+++ b/client/public/view/passwordHelp.hbs
@@ -6,7 +6,7 @@
     <title>passwordEdit</title>
 </head>
 <body>
-    <div id="main" userID = {{userID}} token = {{token}}></div>
-    <script src="/js/passwordEdit.js"></script>
+    <div id="main" userNumber = {{userNumber}}></div>
+    <script src="/js/passwordHelp.js"></script>
 </body>
 </html>
