--- a/client/public/view/userInfo.hbs
+++ b/client/public/view/userInfo.hbs
@@ -5,7 +5,7 @@
     <title>my page</title>
 </head>
 <body>
-    <div id="main" nickname={{nickname}}></div>
+    <div id="main" number={{number}}></div>
     <script src="/js/userInfo.js"></script>
 </body>
 </html>
